--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <h1>
-<marquee scrollamount=10>
-<cont color="blue">
+<marquee scrollamount=30>
+<font color="red">
 Sample web page is working correctly.
 </font>
 </marquee>
